--- a/asWeek9/app/src/main/res/layout/fragment_edit_note.xml
+++ b/asWeek9/app/src/main/res/layout/fragment_edit_note.xml
@@ -4,11 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EditNoteFragment">
+
     <EditText
         android:id="@+id/note_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:inputType="textMultiLine"
         android:gravity="top"
-        android:hint="Enter Note..." />
+        android:hint="Enter notes.." />
 </FrameLayout>
