--- a/asWeek9/app/src/main/res/menu/menu.xml
+++ b/asWeek9/app/src/main/res/menu/menu.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:id="@+id/action_new"
         app:showAsAction="always"
@@ -10,4 +12,6 @@
         app:showAsAction="always"
         android:visible="false"
         android:title="Close" />
+
+
 </menu>
